database created - init

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Piyush Kumar Singh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0"
   }
 }
