--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Piyush Kumar Singh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "validator": "^13.12.0"
